--- a/source/makefile
+++ b/source/makefile
@@ -8,3 +8,7 @@ demo:
 	@mipsel-linux-uclibc-g++ demo.cpp dinguxgdk.a $(flags) -o demo_a320.dge
 tileset:
 	@mipsel-linux-uclibc-g++ tileset.cpp dinguxgdk.a $(flags) -o tileset_a320.dge
+full:
+	@make library
+	@make demo
+	@make tileset
